--- a/Develop/client/index.html
+++ b/Develop/client/index.html
@@ -25,8 +25,9 @@
       </div>
      <h1> Just Another Text Editor</h1>
      
-      <div class="navbar-brand"><img src="./assets/icons/icon_96x96.png"/>
-      </div>
+      <div class="navbar-brand">
+            <img src="./assets/icons/icon_96x96.png" alt="JATE icon"/>
+          </div>
     </nav>
 
     <main id="main">
