adding config,database files

--- a/Develop/client/index.html
+++ b/Develop/client/index.html
@@ -26,14 +26,14 @@
      <h1> Just Another Text Editor</h1>
      
       <div class="navbar-brand">
-            <img src="./assets/icons/icon_96x96.png" alt="JATE icon"/>
+            <img src="" alt="JATE icon"/>
           </div>
     </nav>
 
     <main id="main">
-      <div class="loading-container">
+     <!--  <div class="loading-container">
         <div class="loading-spinner"></div>
-      </div>
+      </div> -->
     </main>
     
   </body>
